Header - add link to qr code in the equipment button. Equipment page - remove border of the notes, fix the hovers, change the name of the page, add button to scan another equipment. Timekeeper page - add button to scan another employee, add name of the page. Update Status page - remove the border of the div gray, remove border of the notes, align the divs and the buttons, remove border of the button. Checklist page - remove the border of the buttons, add hover to questions buttons. Taskflow page - fix link's area of the pending tasks.

--- a/heavyconnect/static/css/equipStyle.css
+++ b/heavyconnect/static/css/equipStyle.css
@@ -112,7 +112,7 @@
 }
 #btnUpdate:hover
 {
-	color: black;
+	background: #6E655C;
 }
 #btnNewTask
 {
@@ -123,7 +123,7 @@
 }
 #btnNewTask:hover
 {
-	color: black;
+	background: #6E655C;
 }
 #btnChecklist
 {
@@ -134,7 +134,7 @@
 }
 #btnChecklist:hover
 {
-	color: black;
+	background: #6E655C;
 }
 
 #info
